[gd_scene load_steps=2 format=3 uid="uid://dk7st5buooa3n"]

[ext_resource type="Script" uid="uid://dbmw3dpc5t20q" path="res://scripts/character_creation/Step3_CategoryChoice.gd" id="1"]

[node name="Step3_CategoryChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Header" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ëŠ¥ë ¥ íŠ¹ì„± ì„ íƒ"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ì–´ë–¤ ë¶„ì•¼ì—ì„œ ë›°ì–´ë‚œ ì„ ìˆ˜ê°€ ë˜ê³  ì‹¶ë‚˜ìš”?"
horizontal_alignment = 1

[node name="CADisplay" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
alignment = 1

[node name="CurrentCA" type="Label" parent="ScrollContainer/VBoxContainer/Header/CADisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "í˜„ì¬ CA: 80"

[node name="ProjectedCA" type="Label" parent="ScrollContainer/VBoxContainer/Header/CADisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ì˜ˆìƒ CA: 80"

[node name="CategorySelection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TechnicalButton" type="Button" parent="ScrollContainer/VBoxContainer/CategorySelection"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
toggle_mode = true
text = "âš™ï¸ Technical
ê¸°ìˆ ì  ì™„ì„±ë„"

[node name="MentalButton" type="Button" parent="ScrollContainer/VBoxContainer/CategorySelection"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
toggle_mode = true
text = "ğŸ§  Mental
ê²Œì„ ì´í•´ë ¥"

[node name="PhysicalButton" type="Button" parent="ScrollContainer/VBoxContainer/CategorySelection"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
toggle_mode = true
text = "ğŸ’ª Physical
ì‹ ì²´ ëŠ¥ë ¥"

[node name="CategoryInfo" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/CategoryInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ì¹´í…Œê³ ë¦¬ë¥¼ ì„ íƒí•˜ì„¸ìš”"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="ScrollContainer/VBoxContainer/CategoryInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ìœ„ 3ê°œ ì¤‘ í•˜ë‚˜ë¥¼ ì„ íƒí•˜ë©´ í•´ë‹¹ ì˜ì—­ì˜ ëª¨ë“  ëŠ¥ë ¥ì¹˜ê°€ í–¥ìƒë©ë‹ˆë‹¤"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FeaturesLabel" type="Label" parent="ScrollContainer/VBoxContainer/CategoryInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 3
